--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.6.2
   firebase_database: ^9.1.0
   firebase_storage: ^10.3.4
+  google_sign_in: ^5.4.1
 
 
 dev_dependencies:
